--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="{% static 'css/store.css' %}" />
     <link rel="stylesheet" href="{% static 'css/kezdolap.css' %}" />
     <link rel="stylesheet" href="{% static 'css/register.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
