--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -88,7 +88,7 @@
         <h4><strong>{{ product.price|floatformat:0|intcomma }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
         
         <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
-        <button class="button-33 view" role="button" onclick="lightopenQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
+        <button class="button-33 view" role="button" onclick="lightopenQuickView( '{{ product.id }}', '{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
       </div>
     </div>
     <div id="light" class="popup-view">
@@ -100,7 +100,7 @@
         <div class="lightinfók">
           <h2 id="lightquick-view-name"></h2>
           <p id="lightquick-view-details"></p>
-          <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart quickview" role="button">Kosárba</button>
+          <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart quickview" id="lightupdate-cart" role="button">Kosárba</button>
         </div>
       </div>
     </div>
@@ -108,18 +108,21 @@
   {% endfor %}
 </div>
 
+<!-- Light Quick View Popup JavaScript -->
+
 <script type="text/javascript">
-  function lightopenQuickView(imageURL, name, brand, category, description, price, rating) {
-     document.getElementById('lightquick-view-image').src = imageURL;
-     document.getElementById('lightquick-view-name').innerHTML = name + '<br><span>' + brand + '</span>';
-     document.getElementById('lightquick-view-details').innerHTML = category +  '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
-     document.getElementById('light').classList.add('active');
-   }
- 
-   function lightcloseQuickView() {
-     document.getElementById('light').classList.remove('active');
-   }
- </script>
+  function lightopenQuickView(productId, imageURL, name, brand, category, description, price, rating) {
+    document.getElementById('lightupdate-cart').setAttribute('data-product', productId);
+    document.getElementById('lightquick-view-image').src = imageURL;
+    document.getElementById('lightquick-view-name').innerHTML = name + '<br><span>' + brand + '</span>';
+    document.getElementById('lightquick-view-details').innerHTML = category +  '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
+    document.getElementById('light').classList.add('active');
+  }
+
+  function lightcloseQuickView() {
+    document.getElementById('light').classList.remove('active');
+  }
+</script>
 
 <div class="row hidden" style="margin-top: 100px;" id="darkStore">
   {% for product in products %}
@@ -140,7 +143,7 @@
         <h4><strong>{{ product.price|floatformat:0|intcomma }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
         
         <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
-        <button class="button-33 view" role="button" onclick="darkopenQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
+        <button class="button-33 view" role="button" onclick="darkopenQuickView('{{ product.id }}', '{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
       </div>
     </div>
     <div id="dark" class="popup-view">
@@ -152,7 +155,7 @@
         <div class="darkinfók">
           <h2 id="darkquick-view-name"></h2>
           <p id="darkquick-view-details"></p>
-          <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart quickview" role="button">Kosárba</button>
+          <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart quickview" id="darkupdate-cart" role="button">Kosárba</button>
         </div>
       </div>
     </div>
@@ -162,21 +165,20 @@
 </div>
 
 
-<!-- Quick View Popup JavaScript -->
+<!-- Dark Quick View Popup JavaScript -->
 <script type="text/javascript">
-  function darkopenQuickView(imageURL, name, brand, category, description, price, rating) {
-     document.getElementById('darkquick-view-image').src = imageURL;
-     document.getElementById('darkquick-view-name').innerHTML = name + '<br><span>' + brand + '</span>';
-     document.getElementById('darkquick-view-details').innerHTML = category +  '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
-     document.getElementById('dark').classList.add('active');
+  function darkopenQuickView(productId, imageURL, name, brand, category, description, price, rating) {
+    document.getElementById('darkupdate-cart').setAttribute('data-product', productId);
+    document.getElementById('darkquick-view-image').src = imageURL;
+    document.getElementById('darkquick-view-name').innerHTML = name + '<br><span>' + brand + '</span>';
+    document.getElementById('darkquick-view-details').innerHTML = category +  '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
+    document.getElementById('dark').classList.add('active');
    }
  
    function darkcloseQuickView() {
      document.getElementById('dark').classList.remove('active');
    }
  </script>
-<!-- Quick View Popup HTML -->
-
 
 <div class="popup" id="popup">
   <img src="{% static 'images/tick.png' %}" />
