--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -39,7 +39,7 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="static\images\carousel2.jpeg/" alt="">
+                            <img src="static\images\carousel2.jpeg" alt="">
                         </div>
                         <figcaption>
 
@@ -50,7 +50,7 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="static\images\carousel3.webp/" alt="">
+                            <img src="static\images\carousel3.webp" alt="">
                         </div>
                         <figcaption>
                             A raktáros csapatunk
@@ -61,7 +61,7 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="static\images\carousel4.avif/" alt="">
+                            <img src="static\images\carousel4.avif" alt="">
                         </div>
                         <figcaption>
                             A szállítási ügyintézők
@@ -72,7 +72,7 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="static\images\carousel5.jpg/" alt="">
+                            <img src="static\images\carousel5.jpg" alt="">
                         </div>
                         <figcaption>
                             Lagzi Lajcsi 17 éves korában az eslő áramkörével
@@ -83,7 +83,7 @@
                 <li class="carousel__slide">
                     <figure>
                         <div>
-                            <img src="static\images\carousel6.jpeg/" alt="">
+                            <img src="static\images\carousel6.jpeg" alt="">
                         </div>
                         <figcaption>
                             Futáraink a legmodernebb szállítóeszközökkel hordják a megrendeléseket
@@ -94,22 +94,22 @@
             </ul>
             <ul class="carousel__thumbnails">
                 <li>
-                    <label for="slide-1"><img src="static\images\carousel1.jpeg/" alt=""></label>
+                    <label for="slide-1"><img src="static\images\carousel1.jpeg" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-2"><img src="static\images\carousel2.jpeg/" alt=""></label>
+                    <label for="slide-2"><img src="static\images\carousel2.jpeg" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-3"><img src="static\images\carousel3.webp/" alt=""></label>
+                    <label for="slide-3"><img src="static\images\carousel3.webp" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-4"><img src="static\images\carousel4.avif/" alt=""></label>
+                    <label for="slide-4"><img src="static\images\carousel4.avif" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-5"><img src="static\images\carousel5.jpg/" alt=""></label>
+                    <label for="slide-5"><img src="static\images\carousel5.jpg" alt=""></label>
                 </li>
                 <li>
-                    <label for="slide-6"><img src="static\images\carousel6.jpeg/" alt=""></label>
+                    <label for="slide-6"><img src="static\images\carousel6.jpeg" alt=""></label>
                 </li>
             </ul>
         </div>
