--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -146,3 +146,21 @@ body.dark .card{
     border-radius: 15%;
     box-shadow: grey 0 0 1vh;
 }
+
+.follower_img{
+    width: 25px;
+    height: 25px;
+    object-fit: cover;
+}
+
+.profile_img{
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.block.description{
+    margin: auto; 
+    max-width: 400px;
+    box-shadow: grey 0 0 0.6vh;
+}
