--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -40,7 +40,6 @@ body{
     position:relative;
     overflow:hidden;
     border-radius:8px;
-    cursor:pointer;
 }
 
 body.dark .card{
@@ -163,4 +162,39 @@ body.dark .card{
     margin: auto; 
     max-width: 400px;
     box-shadow: grey 0 0 0.6vh;
+}
+
+a.follower_a{
+    text-decoration: none;
+    margin-right: 5px;
+}
+.follower_a:hover{
+    text-decoration: none;
+    scale: 1.1;
+    color: #4879ff;
+}
+
+.follow_btn:hover{
+    text-decoration: none;
+    scale: 1.3;
+    color: white;
+    background-color: green;
+}
+.unfollow_btn:hover{
+    text-decoration: none;
+    scale: 1.3;
+    color: white;
+    background-color: red;
+}
+
+button{
+    border: 0.5px solid black;
+    border-radius: 50%;
+    background: none;
+
+}.big_btn{
+    margin-left: 5px;
+    width: 30px;
+    height: 30px;
+    font-size: 16px;
 }
